--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,17 @@ body {
   width: auto;
 }
 
+#sideCards {
+  height: 130px;
+  background-color: #8bea96;
+  width: auto;
+}
+
 #showDeck {
+  display: flex;
+}
+
+#showSide {
   display: flex;
 }
 
@@ -164,6 +174,31 @@ body {
   border-radius: 3px;
   color: #eeebc7;
   background-color: #bfc476;
+}
+
+#showSideButton {
+  margin: 0;
+  width: 57px;
+  height: 82px;
+  text-align: center;
+  font-size: 10px;
+  font-weight: bold;
+  border-style: solid;
+  border-radius: 3px;
+  color: #b4eebd;
+  background-color: #407f35;
+}
+
+#showSideArea {
+  margin: auto;
+  width: 300px;
+  height: 82px;
+  text-align: center;
+  font-size: 10px;
+  border-style: dashed;
+  border-radius: 3px;
+  color: #abeeb2;
+  background-color: #80c47a;
 }
 
 #setting {
@@ -197,7 +232,7 @@ body {
   list-style: none;
   display: flex;
   background-color: #555;
-  padding: 0 37.5px  0 37.5px;
+  padding: 0;
   margin: 0;
 }
  
